--- a/Copy_of_Smarttraffic.ipynb
+++ b/Copy_of_Smarttraffic.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -14,6 +15,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harshx001/Smart-Traffic-Prediction/blob/main/Copy_of_Smarttraffic.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": null,
@@ -5725,65 +5736,13 @@
     {
       "cell_type": "code",
       "source": [
-        "!cp /content/your_notebook.ipynb /content/drive/MyDrive/project_folder/\n",
-        "!cp /content/raw_data.csv /content/drive/MyDrive/project_folder/\n",
-        "!cp /content/processed_data.csv /content/drive/MyDrive/project_folder/"
+        "!pip freeze > requirements.txt\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FkCnLkgNLSjX",
-        "outputId": "4c1e3f29-7f10-4493-c9c7-70e43ea15a01"
+        "id": "o52_Ur0oRn_X"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "cp: cannot stat '/content/your_notebook.ipynb': No such file or directory\n",
-            "cp: cannot stat '/content/raw_data.csv': No such file or directory\n",
-            "cp: cannot stat '/content/processed_data.csv': No such file or directory\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%writefile README.md\n",
-        "# Smart Traffic Congestion Prediction Model\n",
-        "\n",
-        "## 📌 Project Overview\n",
-        "This project predicts traffic congestion based on historical, weather, and temporal data using machine learning techniques...\n",
-        "\n",
-        "## 📁 Files\n",
-        "- `Smart_Traffic_Model.ipynb`: Main ML notebook\n",
-        "- `raw_data.csv`: Original dataset\n",
-        "- `processed_data.csv`: Cleaned dataset\n",
-        "- `requirements.txt`: Python libraries\n",
-        "\n",
-        "## 📊 Visuals\n",
-        "Includes Power BI dashboards, heatmaps, and boxplots to visualize traffic patterns.\n"
-      ],
-      "metadata": {
-        "id": "flAJbx-uN919",
-        "outputId": "d7c13cc1-469f-4e9b-9f68-df3466bf3caf",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing README.md\n"
-          ]
-        }
-      ]
+      "execution_count": 46,
+      "outputs": []
     }
   ]
 }
